@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2019/07/31 13:58:41 brook Exp $
+
+SHA1 (R/htmlwidgets_1.3.tar.gz) = 12f801b88a6c9f4787470a0a04b0c36ccbe1bc3c
+RMD160 (R/htmlwidgets_1.3.tar.gz) = 908b9f341904132a56af1d0dabf4637191f81e0b
+SHA512 (R/htmlwidgets_1.3.tar.gz) = e3481ce4441463dc9ca98e082a6f35823736d6069437c8f4942586e7aefb6a844dc9d4177483226c62b6e4e3ade08ea6e10cd97cd87ac3a45baec74bb34be09d
+Size (R/htmlwidgets_1.3.tar.gz) = 866548 bytes
