@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3127 2019/07/31 13:56:46 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3128 2019/07/31 13:58:41 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5084,3 +5084,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Added textproc/R-readstata13 version 0.9.2 [brook 2019-07-31]
 	Added textproc/R-readxl version 1.3.1 [brook 2019-07-31]
 	Added time/R-hms version 0.5.0 [brook 2019-07-31]
+	Added www/R-htmlwidgets version 1.3 [brook 2019-07-31]
